--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <main class="app-shell">
         <header class="app-header">
-            <h1>Shiny Sliding Puzzle</h1>
-            <p class="subtitle">Guide the red block to the exit. Drag pieces with your mouse to solve the puzzle.</p>
+            <h1>Free the red block !</h1>
+            <p class="subtitle">Drag the red block to the exit (red tiles) to solve the puzzle.</p>
         </header>
 
         <section class="game-wrapper">
