ui : smaller title, make the grid fit to mobile screen

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main class="app-shell">
         <header class="app-header">
             <h1>Free the red block !</h1>
-            <p class="subtitle">Drag the red block to the exit (red tiles) to solve the puzzle.</p>
+            <p class="subtitle">Drag the red block to the exit (red tiles).</p>
         </header>
 
         <section class="game-wrapper">
@@ -29,7 +29,6 @@
             </div>
             <aside class="sidebar" aria-label="Game controls and history">
                 <div class="panel">
-                    <h2>Stats</h2>
                     <div class="stats-grid">
                         <div>
                             <span class="label">Moves</span>
